Fixed some typos, used BufferedReader instead of Files.lines for jar packing purposes (Files.lines) throws npe